ARROW-10027: [C++] Fix Take array kernel for NullType